--- a/templates/results.html
+++ b/templates/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../static/icon.png" type="image/png">
+    <link rel="icon" href="../static/randgen-logo.png" type="image/png">
 
     <title>RandGen | Resultados de la Generación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
